--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -21,8 +21,9 @@
 	    <div class="row">
 	      <div class="span4">
 	      <h2>Input</h2>
-			<div id="webcam">
-			</div>
+			<!--<div id="webcam">
+			</div>-->
+			<video autoplay id="webcam"></video>
 	      </div>
 	     
 	      <div class="span4">
