--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -58,7 +58,12 @@
 <script type="text/javascript" src="js/glasses/ccv.js"></script>
 <script type="text/javascript" src="js/glasses/face.js"></script>
 <script type="text/javascript" src="js/glasses/stackblur.js"></script>
+
+
+<script type="text/javascript" src="js/adapter.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/demo.js"></script>
+
 
 </body>
 </html>
