--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>getUserMedia() shim demo</title>
-	<meta name="author" content="Addy Osmani"/>
+	<meta name="author" content="Rich Rein"/>
 	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
@@ -19,21 +19,14 @@
 	<div class="row">
 	  <div class="span12">
 	    <div class="row">
-	      <div class="span4">
-	      <h2>Input</h2>
-			<!--<div id="webcam">
-			</div>-->
+	      <div class="span6">
+	      	<h2>Input</h2>
 			<video autoplay id="webcam"></video>
 	      </div>
-	     
-	      <div class="span4">
-	      <h2>Output</h2>
-	      <canvas id="canvas"  height="240" width="320"></canvas>
-	      </div>
-	      <div class="span4">	    
-	    <h2>Face Detection</h2>
-	    	<canvas id="output"  height="426" width="515"></canvas>
-	    </div>
+	      <div class="span6">	    
+		    	<h2>Face Detection</h2>
+		    	<canvas id="output"  height="426" width="515"></canvas>
+    		</div>
 	    </div>
 	 
 	    <div class="row">
@@ -44,13 +37,13 @@
 	    </div>
 	    	<div class="row">
 		    	<div class="span4">&nbsp;</div>
-		    	<div class="span4"><button class="btn btn-primary btn-large" id="takeSnapshot">1. Take a picture</button>&nbsp;<button class="btn btn-primary btn-large" id="detectFaces">2. Detect faces</button></div>
+		    	<div class="span4"><button class="btn btn-primary btn-large" id="detectFaces">Take picture</button></div>
 		    	<div class="span4">&nbsp;</div>
   		</div>
 	  </div>
 	</div>
 	</section>
-	<footer>This shim &copy; <a href="http://addyosmani.com">Addy Osmani</a> 2012.</footer>
+	<footer>This shim &copy; <a href="http://addyosmani.com">Addy Osmani</a> 2012., updated to work in MS Edge by Rich Rein 2016</footer>
 </div>
 
 <!--[if IE]><script src="js/excanvas.js"></script><![endif]-->
@@ -59,7 +52,7 @@
 <script type="text/javascript" src="js/glasses/face.js"></script>
 <script type="text/javascript" src="js/glasses/stackblur.js"></script>
 
-
+<!-- https://webrtc.github.io/samples/src/content/getusermedia/canvas/ -->
 <script type="text/javascript" src="js/adapter.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/demo.js"></script>
