--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -21,8 +21,8 @@
 	    <div class="row">
 	      <div class="span6">
 	      	<h2>Input</h2>
-			<video autoplay></video>
-			<div id="webcam"></div>
+			<video autoplay id="webcam"></video>
+			<div id="webcamFallback"></div>
 	      </div>
 	      <div class="span6">	    
 		    	<h2>Face Detection</h2>
