--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>getUserMedia() shim demo</title>
-	<meta name="author" content="Rich Rein"/>
+	<meta name="author" content="Addy Osmani, WebRTC, Rich Rein"/>
 	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
@@ -26,7 +26,7 @@
 	      </div>
 	      <div class="span6">	    
 		    	<h2>Face Detection</h2>
-		    	<canvas id="output"  height="426" width="515"></canvas>
+		    	<canvas id="output" height="426" width="515"></canvas>
     		</div>
 	    </div>
 	 
