--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -16,6 +16,23 @@
 		</div>
 	</header>
 	<section>
+	<!-- error handling -->
+	<div id = "flashError" class = "outOfTheWay warningAreaContainer">
+        <span class = "advisory">
+            Flash must be installed.
+        </span>
+    </div>
+    <div id = "noCameraError" class = "outOfTheWay warningAreaContainer">
+        <span class = "advisory">
+            No camera detected.
+        </span>
+    </div>
+    <div id = "olderBrowserError" class = "outOfTheWay warningAreaContainer">
+        <span class = "advisory">
+            Your browser is too old.
+        </span>
+    </div>
+    <!-- actual content -->
 	<div class="row">
 	  <div class="span12">
 	    <div class="row">
