--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -65,15 +65,16 @@
 </div>
 
 <!--[if IE]><script src="js/excanvas.js"></script><![endif]-->
-<script type="text/javascript" src="../lib/getUserMedia.js"></script>
-<script type="text/javascript" src="js/glasses/ccv.js"></script>
-<script type="text/javascript" src="js/glasses/face.js"></script>
-<script type="text/javascript" src="js/glasses/stackblur.js"></script>
+<script type="text/javascript" src="js/jquery-1.7.1.min.js"><!--//--></script>
+<script type="text/javascript" src="../lib/getUserMedia.js"><!--//--></script>
+<script type="text/javascript" src="js/glasses/ccv.js"><!--//--></script>
+<script type="text/javascript" src="js/glasses/face.js"><!--//--></script>
+<script type="text/javascript" src="js/glasses/stackblur.js"><!--//--></script>
 
 <!-- https://webrtc.github.io/samples/src/content/getusermedia/canvas/ -->
-<script type="text/javascript" src="js/adapter.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
-<script type="text/javascript" src="js/demo.js"></script>
+<script type="text/javascript" src="js/adapter.js"><!--//--></script>
+<script type="text/javascript" src="js/common.js"><!--//--></script>
+<script type="text/javascript" src="js/demo.js"><!--//--></script>
 
 
 </body>
