--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -35,7 +35,7 @@
     <!-- actual content -->
 	<div class="row">
 	  <div class="span12">
-	    <div class="row">
+	    <div id="photoCapture" class="row">
 	      <div class="span6">
 	      	<h2>Input</h2>
 			<div id="webcamFallback"></div>
