--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>getUserMedia() shim demo</title>
 	<meta name="author" content="Addy Osmani, WebRTC, Rich Rein"/>
-	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+	<!--[if IE]><script src="js/html5.js"></script><![endif]-->
 </head>
 <body>
 <link rel="stylesheet" href="css/bootstrap.min.css">
