added X-UA-Compatible meta tag

--- a/face-detection-demo/index.html
+++ b/face-detection-demo/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta http-equiv="X-UA-Compatible" content="chrome=1, IE=edge">
 	<title>getUserMedia() shim demo</title>
 	<meta name="author" content="Addy Osmani, WebRTC, Rich Rein"/>
 	<!--[if IE]><script src="js/html5.js"></script><![endif]-->
